# goit-python-hw-20

./: .gitignore  README.md  pyproject.toml
quotes_scrape/qtsapp/migrations/: 0001_initial.py
quotes_scrape/qtsapp/templates/qtsapp/: index.html
quotes_scrape/quotes_scrape/: asgi.py  settings.py  urls.py  wsgi.py
quotes_scrape/users/: views.py
quotes_scrape/users/templates/users/: login.html  signup.html
quotes_scrape/utils/: config.ini
